# vit

./: .gitignore  Makefile  README.md  go.mod  j.md  main.go  make_venv.sh  pyproject.toml  requirements.txt  setup.py
etc/: graph_ex.py  j.md  new_vit_spec.md  pres.md  to_do.md
internal/: pathnode.go
internal/cli/: cli.go  cmd_add.go  cmd_init.go
internal/db/: assetnode.go  jsonhandler.go  jsonhandler_errors_test.go  jsonhandler_lock_test.go  jsonhandler_ssh_test.go  jsonhandler_test.go  pathnode.go  pathtree.go  transaction.go
internal/testutils/: assertions.go  filesystem.go
internal/vitlib/: add.go  init.go  init_test.go  repo-path.go  repo-path_test.go
src/vit/: __main__.py  constants.py  entry_point.py  (+1 more)
tests/: context.py  fake_ssh_connection.py  test_asset.py  test_asset_template.py  test_branch.py  test_checkout.py  test_clean.py  test_commit.py  test_fetch.py  test_graph.py  test_infos.py  test_init_origin_repo.py  test_init_repo.py  test_local_mode.py  test_log.py  test_main_commands.py  test_package.py  test_rebase.py  test_tag.py  test_update.py  vit_test_repo.py
vit/: __init__.py  __main__.py  command_line_lib.py  constants.py  custom_exceptions.py  file_asset_tree_dir.py  file_commit_list.py  file_config.py  file_file_track_list.py  file_name_generation.py  file_package_tree.py  file_packages.py  file_template.py  graph.py  init_local.py  init_origin.py  json_file.py  main_commands.py  path_helpers.py  py_helpers.py  scp_wrapper.py  ssh_connect.py  ssh_connection.py  tree_fetch.py  vit_connection.py  vit_file_config.py  vit_unit_of_work.py
(+141 files in other folders)
