[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vit"
version = "0.0.1"
license = {text = "MIT License"}
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
    "paramiko",
    "scp",
    "pytest-cov",
]

requires-python = ">= 3.12"
description = "vfx information tracker"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
vit = "vit.entry_point:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
